<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="viewModel"
            type="com.example.githubissuesgraphql.viewmodel.CommentViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="@dimen/view_dimen_s">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/view_dimen_s"
            android:onClick="@{viewModel.onClickCancel}"
            android:padding="@dimen/view_dimen_s"
            android:text="@string/label_cancel"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_comment"
            android:textSize="@dimen/text_size_medium"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@id/tvCancel"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/tvCancel" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvSave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/view_dimen_s"
            android:enabled="@{viewModel.isEnableSave}"
            android:onClick="@{viewModel.onClickSaveComment}"
            android:padding="@dimen/view_dimen_s"
            android:text="@string/label_save"
            android:textColor="@color/text_view_selector"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:viewVisible="@{!viewModel.isEnableLoading}"/>

        <ProgressBar
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginTop="6dp"
            android:layout_marginEnd="20dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:viewVisible="@{viewModel.isEnableLoading}"/>

        <View
            android:id="@+id/viewDivider"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginTop="@dimen/view_dimen_s"
            android:background="@color/gray_divider"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvCancel" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/etCommentContent"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@null"
            android:gravity="top"
            android:hint="@string/hint_comment"
            android:lineSpacingExtra="@dimen/view_dimen_xs"
            android:padding="@dimen/view_dimen_m"
            android:scrollbars="vertical"
            android:textSize="@dimen/text_size_medium"
            android:textWatcher="@{viewModel.commentTextWatcher}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/viewDivider" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>